# revolve

./: .dockerignore  .gitignore  .gitmodules  AUTHORS  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  babyA.yaml  canvas.py  check_experiments_script.sh  check_running_experiments.sh  circle.yml  cleanup_celery.sh  cmake_install.cmake  code_check.sh  cp_storage.sh  direct_tree_test.py  fitnessgait.cpp  gazebo_env.sh  grid.py  killer  manager.py  multiple-consecutive-runs.py  multiple-runs.py  nihedssnake10.yaml  nihedssnake6.yaml  nihedssnake8.yaml  render_temp.py  requirements.txt  revolve.py  revolve.sh  revolve.vrep.py  revolve_restarting.sh  rlpower.py  run_baby.sh  (+23 more)
Revolve/cpp/: CMakeLists.txt
Revolve/cpp/test/: CMakeLists.txt
cpp/: .gitignore  CMakeLists.txt
cpp/revolve/gazebo/: Types.h
cpp/revolve/gazebo/brain/: Brain.cpp  Brain.h  Evaluator.cpp  Evaluator.h  NeuralNetwork.c  NeuralNetwork.cpp  NeuralNetwork.h  RLPower.cpp  RLPower.h  StandardBrain.cpp  StandardBrain.h  ThymioBrain.cpp  ThymioBrain.h
cpp/revolve/gazebo/gzsensors/: FixedContactSensor.cpp  FixedContactSensor.h
cpp/revolve/gazebo/motors/: JointMotor.cpp  JointMotor.h  Motor.cpp  Motor.h  MotorFactory.cpp  MotorFactory.h  Motors.h  PositionMotor.cpp  PositionMotor.h  ServoMotor.cpp  ServoMotor.h  VelocityMotor.cpp  VelocityMotor.h
cpp/revolve/gazebo/plugin/: BodyAnalyzer.cpp  BodyAnalyzer.h  ModelController.cpp  ModelController.h  RobotController.cpp  RobotController.h  WorldController.cpp  WorldController.h  register_analyzer.cpp  register_robot_plugin.cpp  register_world_plugin.cpp
cpp/revolve/gazebo/sensors/: BatterySensor.cpp  BatterySensor.h  ImuSensor.cpp  ImuSensor.h  LightSensor.cpp  LightSensor.h  PointIntensitySensor.cpp  PointIntensitySensor.h  PointProximitySensor.cpp  PointProximitySensor.h  Sensor.cpp  Sensor.h  SensorFactory.cpp  SensorFactory.h  Sensors.h  TouchSensor.cpp  TouchSensor.h  VirtualSensor.cpp  VirtualSensor.h
cpp/revolve/gazebo/standalone/: body_analyzer_server.cpp
cpp/revolve/msgs/: body.proto  insert_sdf_model.proto  insert_sdf_robot.proto  model_inserted.proto  neural_net.proto  parameter.proto  robot_states.proto  sdf_body_analyze.proto  spline_policy.proto
cpp/revolve/vrep/plugin/: register_world_plugin.h
cpprevolve/: CMakeLists.txt  Makefile  Revolve.cbp  cmake_install.cmake
cpprevolve/revolve/brains/: CMakeLists.txt  Makefile  cmake_install.cmake
cpprevolve/revolve/brains/controller/: BrokenDifferentialCPG.cpp  BrokenDifferentialCPG.h  Controller.h  DifferentialCPG.cpp  DifferentialCPG.h  DifferentialCPG2.cpp  DifferentialCPG2.hpp  FixedAngleController.h
cpprevolve/revolve/brains/learner/: BayesianOptimizer.cpp  BayesianOptimizer.h  BoDefinitions.h  DifferentialEvo.cpp  DifferentialEvo.h  EA.cpp  EA.h  EvaluationReporter.h  Evaluator.h  HyperNEAT.cpp  HyperNEAT.h  Learner.cpp  Learner.h  NIPES.cpp  NIPES.h  NoLearner.h  RevEvaluator.h
cpprevolve/revolve/brains/python/: CMakeLists.txt  PyActuator.h  PyController.h  PyDifferentialCPG.cpp  PyDifferentialCPG.h  PySensor.h  bindings.cpp
cpprevolve/revolve/gazebo/: CMakeLists.txt  Makefile  Types.h  cmake_install.cmake
cpprevolve/revolve/gazebo/battery/: Battery.cpp  Battery.h  battery_chart.py  charts.py
cpprevolve/revolve/gazebo/brain/: Evaluator.h  NeuralNetwork.cpp  NeuralNetwork.h  ThymioBrain.cpp
cpprevolve/revolve/gazebo/brains/: Brain.h  BrainFactory.cpp  BrainFactory.h  Brains.h  DifferentialCPG.cpp  DifferentialCPG.h  DifferentialCPGClean.cpp  DifferentialCPGClean.h  DifferentialCPG_BO.h  DifferentialCPPNCPG.cpp  DifferentialCPPNCPG.h  Evaluator.cpp  Evaluator.h  EvaluatorDirectedLocomotion.cpp  EvaluatorDirectedLocomotion.h  FixedAngleController.h  GazeboReporter.cpp  GazeboReporter.h  NeuralNetwork.cpp  NeuralNetwork.h  RLPower.cpp  RLPower.h  RLPowerTargeted.cpp  RLPowerTargeted.h  ThymioBrain.cpp  ThymioBrain.h
cpprevolve/revolve/gazebo/motors/: ActuatorWrapper.h  JointMotor.cpp  JointMotor.h  Motor.cpp  Motor.h  MotorFactory.cpp  MotorFactory.h  Motors.h  PositionMotor.cpp  PositionMotor.h  VelocityMotor.cpp  VelocityMotor.h
cpprevolve/revolve/gazebo/msgs/: robot.proto  robot_states.proto  robot_states_eval.proto  robot_states_learning.proto  sdf_body_analyze.proto
cpprevolve/revolve/gazebo/plugin/: BodyAnalyzer.cpp  BodyAnalyzer.h  CeleryRobotWorker.cpp  CeleryRobotWorker.h  CeleryWorker.cpp  CeleryWorker.h  CeleryWorldController.cpp  CeleryWorldController.h  FrameBuffer.cpp  FrameBuffer.h  LearningWorldController.cpp  LearningWorldController.h  RealtimeWorldController.cpp  RealtimeWorldController.h  RecorderCamera.cpp  RecorderCamera.h  RobotController.cpp  RobotController.h  TorusWorld.cpp  TorusWorld.h  TorusWorldPlugin.cpp  TorusWorldPlugin.h  VideoFileStream.cpp  VideoFileStream.h  WorldController.cpp  WorldController.h  register_analyzer_plugin.cpp  register_celery_analyzer_worker_world_plugin.cpp  register_celery_robot_worker_world_plugin.cpp  register_celery_worker_world_plugin.cpp  register_celeryworld_plugin.cpp  register_realtime_world_plugin.cpp  register_recorder_camera_plugin.cpp  register_torus_world.cpp  register_torus_world_plugin.cpp
cpprevolve/revolve/gazebo/sensors/: BatterySensor.cpp  (+18 more)
cpprevolve/revolve/msgs/: body.proto  neural_net.proto  parameter.proto
cpprevolve/revolve/raspberry/: AngleToTargetDetector.cpp  AngleToTargetDetector.h  CMakeLists.txt  PIGPIOConnection.h  RaspController.cpp  RaspController.h  Servo.cpp  Servo.h  Timer.h  rasp_main.cpp  robot_conf.yaml
cpprevolve/revolve/utils/: Address.cpp  Address.h  CMakeLists.txt
cpprevolve/revolve/vrep/: CMakeLists.txt
revolve/cpp/: CMakeLists.txt
revolve/cpp/doc/: release-notes.dox  technical-overview.dox  welcome.dox
revolve/cpp/include/: CMakeLists.txt
revolve/cpp/src/: CMakeLists.txt
spec/: CMakeLists.txt  body.proto  neural_net.proto  parameter.proto  revolve.proto  robot.proto  tol.proto
spec/cpp/: tol.pb.cc  tol.pb.h  tolrg.pb.h
src/: CMakeLists.txt  tolrg.proto
src/cpp/: tolrg.pb.cc
src/python/: __init__.py
(+40120 files in other folders)
